--- a/npm/package.json
+++ b/npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@soyleninjs/swappit",
-  "version": "1.0.1",
-  "description": "Swappit es una librería JavaScript diseñada para facilitar la actualización parcial o total del contenido HTML de tu sitio web sin recargar la página. Su enfoque declarativo permite integrar funcionalidades modernas de navegación y experiencia de usuario sin la complejidad de un framework completo o arquitectura SPA. Ideal para proyectos que requieren velocidad, simplicidad y compatibilidad con plataformas. Swappit detecta y reemplaza dinámicamente elementos del DOM, manteniendo scripts de terceros funcionales y ofreciendo una navegación fluida y eficiente.",
+  "version": "2.0.0",
+  "description": "Swappit es una librería JavaScript ligera que permite actualizar parcial o totalmente el contenido HTML de tu sitio web sin recargar la página. Con un enfoque declarativo basado en atributos data personalizados, facilita la creación de experiencias de navegación modernas sin la complejidad de un framework completo o SPA.",
   "main": "swappit.min.js",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "dom-manipulation",
     "html-update"
   ],
-  "author": "soyleninjs <soyleninjs@gmail.com>",
+  "author": "@soyleninjs",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/soyleninjs/swappit/issues"
